<resources>
    <string name="app_name">BondoMan</string>

    <!-- Header -->
    <string name="title_transactions">Transactions</string>
    <string name="title_new_transaction">New Transaction</string>
    <string name="title_transaction_detail">Transaction Detail</string>
    <string name="title_scan">Scan</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>

    <!-- Fixed -->
    <string name="bondo">Bondo</string>
    <string name="man">Man</string>
    <string name="version_number">Ver 1.0.0</string>
    <string name="footer">Developed by DGR</string>
    <string name="save_to_local">Save to local</string>
    <string name="share_via_email">Share via email</string>
    <string name="randomize_transaction">Randomize transaction</string>
    <string name="logout">Logout</string>


    <!-- Button -->
    <string name="btn_save">Save</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_login">Login</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_enable_twibbon">Enable Twibbon</string>
    <string name="btn_disable_twibbon">Disable Twibbon</string>

    <!-- Placeholder -->
    <string name="empty_amount">Rp 0</string>
    <string name="empty_growth">0 %</string>>
    <string name="empty_amount_value">0</string>
    <string name="transaction_title">Title</string>
    <string name="transaction_location">Location</string>
    <string name="getting_location">Getting your location...</string>
    <string name="hint_transaction_title">Transaction title</string>

    <!-- Label -->
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_title">Title</string>
    <string name="label_your_balance">Your Balance</string>
    <string name="label_cashflow">Cashflow</string>
    <string name="label_growth">Growth</string>
    <string name="label_date">Date</string>
    <string name="label_category">Category</string>
    <string name="label_amount">Amount (Rp)</string>
    <string name="label_location">Location</string>
    <string name="label_general">General</string>
    <string name="label_preferences">Preferences</string>

    <!-- Alt -->
    <string name="alt_back_button">Back button</string>
    <string name="alt_transaction_button">Transaction button</string>
    <string name="alt_scan_button">Scan button</string>
    <string name="alt_add_transaction_button">Add transaction button</string>
    <string name="alt_statistics_button">Statistics button</string>
    <string name="alt_settings_button">Settings button</string>
    <string name="alt_logo">Bondoman logo</string>
    <string name="alt_fab">Add transaction</string>
    <string name="alt_transaction_icon">transaction_icon</string>
    <string name="alt_right_arrow">Right arrow</string>
    <string name="alt_download_icon">Download icon</string>
    <string name="alt_share_icon">Share icon</string>
    <string name="alt_logout_icon">Logout icon</string>
    <string name="alt_profile_picture">Profile picture</string>
    <string name="alt_twibbon">Twibbon</string>

</resources>