<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.mainmenu.fragment.TransactionForm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/transactionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/title_new_transaction"
            android:textColor="?attr/colorSecondary"
            style="@style/Headline3"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/transactionText"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/formLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/label_title"
                android:textColor="?attr/colorPrimaryFixedDim"
                style="@style/Label"/>

            <EditText
                android:id="@+id/titleInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titleLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="7dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:hint="@string/hint_transaction_title"
                android:textColorHint="?attr/colorPrimaryFixedDim"
                android:textColor="?attr/colorSecondary"
                style="@style/Body1"
                android:background="@drawable/rounded_input_field"
                android:backgroundTint="?attr/colorPrimaryContainer"/>

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titleInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/label_date"
                android:textColor="?attr/colorPrimaryFixedDim"
                style="@style/Label" />

            <TextView
                android:id="@+id/dateInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dateLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:padding="7dp"
                tools:text="15 March 2024"
                android:textColorHint="?attr/colorPrimaryFixedDim"
                android:textColor="?attr/colorSecondary"
                style="@style/Body1"
                android:background="@drawable/rounded_input_field"
                android:backgroundTint="?attr/colorPrimaryContainer"/>

            <TextView
                android:id="@+id/categoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dateInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/label_category"
                android:textColor="?attr/colorPrimaryFixedDim"
                style="@style/Label" />

            <Spinner
                android:id="@+id/categoryInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/categoryLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="7dp"
                style="@style/Body1"
                android:background="@drawable/spinner_input_field"
                android:backgroundTint="?attr/colorPrimaryContainer" />

            <TextView
                android:id="@+id/amountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/categoryInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/label_amount"
                android:textColor="?attr/colorPrimaryFixedDim"
                style="@style/Label"  />

            <EditText
                android:id="@+id/amountInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/amountLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:padding="7dp"
                android:hint="@string/empty_amount_value"
                android:inputType="number"
                android:maxLines="1"
                android:textColorHint="?attr/colorPrimaryFixedDim"
                android:textColor="?attr/colorSecondary"
                style="@style/Body1"
                android:background="@drawable/rounded_input_field"
                android:backgroundTint="?attr/colorPrimaryContainer" />

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/amountInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/label_location"
                android:textColor="?attr/colorPrimaryFixedDim"
                style="@style/Label" />

            <TextView
                android:id="@+id/locationInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/locationLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:padding="7dp"
                android:text=""
                android:background="@drawable/rounded_input_field"
                android:hint="@string/getting_location"
                android:maxLines="1"
                android:textColorHint="?attr/colorPrimaryFixedDim"
                android:textColor="?attr/colorSecondary"
                style="@style/Body1"
                android:backgroundTint="?attr/colorPrimaryContainer"
                android:drawableEnd="@drawable/location_ic" />

            <Button
                android:id="@+id/newTransactionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationInput"
                app:layout_constraintVertical_bias="0.3"
                android:background="@drawable/rounded_button"
                android:text="@string/btn_save"
                android:textAllCaps="false"
                android:textColor="?attr/colorButtonNormal"
                style="@style/Button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>