<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.mainmenu.newTransaction.NewTransactionFragment"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/formLayout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/label_title"
                android:textColor="?attr/colorPrimaryFixedDim"
                style="@style/Label"/> />

            <EditText
                android:id="@+id/titleInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titleLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="7dp"
                android:layout_marginTop="5dp"
                android:maxLines="1"
                android:hint="@string/hint_transaction_title"
                android:textColorHint="?attr/colorPrimaryFixedDim"
                android:textColor="?attr/colorSecondary"
                style="@style/Body1"
                android:background="@drawable/rounded_input_field"
                android:backgroundTint="?attr/colorPrimaryContainer" />

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titleInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/label_date"
                android:textColor="?attr/colorPrimaryFixedDim"
                style="@style/Label" />

            <TextView
                android:id="@+id/dateInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dateLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:padding="7dp"
                tools:text="15 March 2024"
                android:textColorHint="?attr/colorPrimaryFixedDim"
                android:textColor="?attr/colorSecondary"
                style="@style/Body1"
                android:background="@drawable/rounded_input_field"
                android:backgroundTint="?attr/colorPrimaryContainer" />

            <TextView
                android:id="@+id/categoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dateInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/label_category"
                android:textColor="?attr/colorPrimaryFixedDim"
                style="@style/Label" />

            <TextView
                android:id="@+id/categoryInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/categoryLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:padding="7dp"
                tools:text="Income"
                android:textColorHint="?attr/colorPrimaryFixedDim"
                android:textColor="?attr/colorSecondary"
                style="@style/Body1"
                android:background="@drawable/rounded_input_field"
                android:backgroundTint="?attr/colorPrimaryContainer" />

            <TextView
                android:id="@+id/amountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/categoryInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/label_amount"
                android:textColor="?attr/colorPrimaryFixedDim"
                style="@style/Label" />

            <EditText
                android:id="@+id/amountInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/amountLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="5dp"
                android:padding="7dp"
                android:hint="@string/empty_amount_value"
                android:inputType="number"
                android:maxLines="1"
                android:textColorHint="?attr/colorPrimaryFixedDim"
                android:textColor="?attr/colorSecondary"
                style="@style/Body1"
                android:background="@drawable/rounded_input_field"
                android:backgroundTint="?attr/colorPrimaryContainer"  />

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/amountInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/label_location"
                android:textColor="?attr/colorPrimaryFixedDim"
                style="@style/Label" />

            <TextView
                android:id="@+id/locationInput"
                style="@style/Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_input_field"
                android:backgroundTint="?attr/colorPrimaryContainer"
                android:drawableEnd="@drawable/location_ic"
                android:hint="@string/getting_location"
                android:maxLines="1"
                android:padding="7dp"
                android:layout_marginEnd="10dp"
                android:text=""
                android:textColor="?attr/colorSecondary"
                android:textColorHint="?attr/colorPrimaryFixedDim"
                app:layout_constraintEnd_toStartOf="@+id/updateButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locationLabel" />

            <ImageButton
                android:id="@+id/updateButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_update_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locationLabel" />

            <Button
                android:id="@+id/saveTransactionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationInput"
                app:layout_constraintVertical_bias="0.3"
                android:background="@drawable/rounded_button"
                android:text="@string/btn_edit"
                android:textAllCaps="false"
                android:textColor="?attr/colorButtonNormal"
                style="@style/Button" />

            <Button
                android:id="@+id/deleteTransactionButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveTransactionButton"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_delete_button"
                android:text="@string/btn_delete"
                android:textAllCaps="false"
                android:textColor="@color/R5"
                style="@style/Button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>